--- a/app/src/main/res/values-my/strings.xml
+++ b/app/src/main/res/values-my/strings.xml
@@ -90,6 +90,8 @@
     <string name="menu_highlight">ဟိုက်လိုက်</string>
     <string name="menu_favourite">အကြိုက်ဆုံး</string>
     <string name="choose_one">တစ်ခုရွေးရန်</string>
-    <string name="hd_play">အကြည် ကြည်ရန်</string>
+    <string name="hd_play">အကြည် ကြည့်ရန်</string>
     <string name="sd_play">ပုံမှန် ကြည့်ရန်</string>
+    <string name="hd_download">အကြည် ဒေါင်းရန်</string>
+    <string name="sd_download">ပုံမှန် ဒေါင်းရန်</string>
 </resources>
