add xgetter and update Series Item

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -149,6 +149,6 @@
     <string name="hd_download">HD Download</string>
     <string name="sd_download">SD Download</string>
     <string name="link_die_error">Not Availabe</string>
-    <string name="try_another_link">Try Another Link</string>
+    <string name="try_another_link">Trying get another Link</string>
     <string name="menu_channel">channel</string>
 </resources>
